[package]
name = "auth_proxy"
version = "0.1.0"
authors = ["Tobias Moldan <tobias.moldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
warp = {version = "0.3"}
sled = "0.34"
clap = "2.33"
log = "0.4.13"
env_logger = "0.8"
once_cell = "1.5"
bcrypt = "0.9"
shadow-rs = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"

[build-dependencies]
shadow-rs = "0.5"